--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -11,6 +11,11 @@ html {
   padding: 0;
 }
 
+html {
+  font-size: 10px;
+  line-height: 1;
+}
+
 // || Variables
 $blue-color: rgb(120, 204, 204);
 $darkgrey-color: rgb(80, 84, 91);
@@ -25,7 +30,7 @@ $text-fair-color: rgb(246, 237, 216);
 
 @mixin flex-row {
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: row;
   vertical-align: middle;
   justify-content: space-around;
 }
@@ -36,6 +41,14 @@ $text-fair-color: rgb(246, 237, 216);
 
 @mixin transition-ease {
   transition: all 0.5s ease;
+}
+
+@mixin container-shadow {
+  box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.5);
+}
+
+@mixin element-shadow {
+  box-shadow: 3px 2px 7px 0px rgba(0, 0, 0, 0.3);
 }
 
 @mixin media-medium {
