--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -1,41 +1,78 @@
-nav {
-  box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.5);
-}
-
 .navigation {
+  @include container-shadow;
   background-color: $blue-color;
   color: $text-fair-color;
-  width: 100%;
-  height: 13em;
-  padding: 5.4em 0;
+  height: 6.5rem;
+
+  &__icon {
+    @include global-margin;
+    width: 3rem;
+    height: 2rem;
+    position: absolute;
+    top: 2.25rem;
+    right: 1rem;
+    cursor: pointer;
+    @include transition-ease;
+    
+    &--burger {
+      position: absolute;
+      top: 1rem;
+      width: 3rem;
+      height: 3px;
+      background: $text-medium-color;
+      @include element-shadow;
+      
+      &::before {
+        content: '';
+        position: absolute;
+        top: -1rem;
+        width: 3rem;
+        height: 3px;
+        background: $text-medium-color;
+        @include element-shadow;
+      }
+    
+      &::after {
+        content: '';
+        position: absolute;
+        top: 1rem;
+        width: 3rem;
+        height: 3px;
+        background: $text-medium-color;
+        @include element-shadow;
+      }
+    }
+  }
 
   &__list {
     @include global-margin;
-    @include flex-row;
   }  
 
   &__button {
-    flex: 1;
+    visibility: hidden;
     list-style: none;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 2.2em;
-    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-
+    cursor: pointer;
+    @include transition-ease;
   }
 
   &__logo {
-    position: relative;
-    top: -3rem;
-    width: 9rem;
+    width: 9.33rem;
+    position: absolute;
+    top: 0.5rem;
+    left: 3rem;
+    visibility: visible;
     overflow: visible;
     z-index: 1;
   }
 
+  &__image {
+    width: 100%;
+  }
+
   &__dashline {
-    border: 1px dashed $darkgrey-color;
     position: relative;
-    top: -5rem;
-    z-index: 0;
+    top: 1.75rem;
+    border-top: 1px dashed $darkgrey-color;
+    opacity: 0.25;
   }
 }
