--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -103,18 +103,21 @@
   }
 
   &__link-container {
-    visibility: hidden;
-    height: 100vh;
-    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+
+    height: 10rem;
+    
     list-style: none;
     transform: translateY(-100%);
     @include transition-ease;
     
     &.open {
+      height: 100vh;
+      width: 100vw;
+      
       visibility: visible;
   
       background-color: rgba(56, 58, 60, 0.9);
