--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -3,11 +3,15 @@
   color: $text-fair-color;
   text-align: center;
 
-  background-color: $blue-color;
+  background: url(../images/header-background-w1100.png);
   @include transition-ease;
 
   &__title {
     margin: 3rem 0 1rem;
+    font-size: 6.5rem;
+    font-family: "Seaside Resort NF";
+    color: rgba(88, 88, 88, 1);
+    text-shadow: 0px 1px 1px rgba(232, 244, 244, 0.3);
   }
 
   &__ribbon {
@@ -57,7 +61,6 @@
     border-bottom: 1px dashed $darkgrey-color;
 
     &--bottom {
-      padding: 0.25rem;
       border-bottom: none;
       border-top: 1px dashed $darkgrey-color;
     }
