--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -108,6 +108,12 @@
     align-items: center;
     justify-content: space-evenly;
 
+    font-size: 27px; 
+    font-family: "Bazar";
+    text-transform: uppercase;
+    color: rgba(249, 235, 217, 1);
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+
     height: 10rem;
     
     list-style: none;
