--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,34 +1,32 @@
 .header {
-  font-size: 2.2rem;
   color: $text-fair-color;
   text-align: center;
 
-  background: url(../images/header-background-w1100.png);
+  background: url(../images/background/header-background-w1100.png); //temporary
   @include transition-ease;
 
   &__title {
-    margin: 3rem 0 1rem;
-    font-size: 6.5rem;
+    margin: 3rem auto 1rem;
     font-family: "Seaside Resort NF";
-    color: rgba(88, 88, 88, 1);
-    text-shadow: 0px 1px 1px rgba(232, 244, 244, 0.3);
+    color: $text-fair-color;
+    text-shadow: 3px 0px rgba(75, 78, 76, 0.7);
   }
 
   &__ribbon {
     display: inline-block;
-    width: 35rem;
-    margin: 1rem auto 1.5rem;
+    margin: 1rem 5%;
     overflow: visible;
 
-    &-image {
-      width: 35rem;
+    &--image {
+      width: 100%;
     }
   }
 
   &__slider {
     margin: 1rem 5%;
     padding: 0.5rem;
-    background-color: white; // temporary
+    background-color: rgba(251, 250, 246, 1);
+    @include element-shadow;
   }
 
   &__slides {
@@ -36,33 +34,35 @@
   }
 
   &__slide {
-    padding-bottom: 25rem;
-    background-color: coral; // temporary
+    padding-bottom: 15rem;
+    background-color: rgba(227, 223, 215, 1); // temporary
   }
 
-  .slider__caption {          // temporary
-    color: black;
-    margin: 0.5rem auto 0.7rem;
-    text-transform: uppercase;
+  .slider__caption { 
+    color: rgba(0, 0, 0, 0.6);
+    line-height: 1.5;
   }
 
   &__caption {
-    margin: 2rem 10% 3rem;
-    text-transform: uppercase;
+    font-size: 3.2rem;
+    color: $text-fair-color;
+    line-height: 1.3;
+    margin: 2.5rem 5% 0;
+
+    &--second-line {
+      font-size: 2rem;
+      line-height: 1.4;
+      margin: 0 5% 3rem;
+    }
   }
 
   &__dashline {
-    width: 100%;
-    padding: 0.5rem;
-
-    color: transparent;
-    
-    opacity: 0.25;
-    border-bottom: 1px dashed $darkgrey-color;
+    @include dashline-first;
+    border-color: $darkgrey-color;
 
     &--bottom {
-      border-bottom: none;
-      border-top: 1px dashed $darkgrey-color;
+      @include dashline-second;
+      border-color: $darkgrey-color;
     }
   }
 }
