--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -2,22 +2,18 @@
   position: sticky;
   top: 0;
   height: 6.5rem;
-
-  font-size: 2.2rem;
   color: $text-fair-color;
-
-  background-color: $blue-color;
+  background: url(../images/background/navigation-background-w1100.png); // temporary
   @include container-shadow;
   @include transition-ease;
-
   z-index: 2;
 
   &__button {
     position: absolute;
     top: 2.25rem;
     right: 5rem;
-    height: 2rem;
     width: 3rem;
+    height: 2rem;
     cursor: pointer;
     @include transition-ease;
     z-index: 3;
@@ -56,8 +52,8 @@
       &.activated,
       &.activated::before,
       &.activated::after {
-        background-color: $lightgrey-color;
-        box-shadow: 0px 2px 7px 0px $lightgrey-color;
+        background-color: $text-fair-color;
+        box-shadow: 0px 0px 7px 0px $text-fair-color;
       }
 
       &.activated::after {
@@ -81,7 +77,7 @@
     }
   }
 
-  &__list {
+  &__menu {
     list-style: none;
   }
 
@@ -89,43 +85,32 @@
     position: absolute;
     top: 0.5rem;
     left: 5rem;
-    
     width: 9.33rem;
     overflow: visible;
     cursor: pointer;
-    
     @include transition-ease;
     z-index: 3;
     
-    .navigation__image {
+    &--image {
       width: 100%;
     }
   }
 
-  &__link-container {
-    display: flex;
+  &__links {
+    @include flex-row;
     flex-direction: column;
-    align-items: center;
     justify-content: space-evenly;
-
-    font-size: 27px; 
-    font-family: "Bazar";
-    text-transform: uppercase;
-    color: rgba(249, 235, 217, 1);
-    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
-
-    height: 10rem;
-    
+    color: $text-fair-color;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.2);
+    height: 3rem;
     list-style: none;
-    transform: translateY(-100%);
+    transform: translateY(-300%);
     @include transition-ease;
     
     &.open {
       height: 100vh;
-      width: 100vw;
-      
+      width: 100%;
       visibility: visible;
-  
       background-color: rgba(56, 58, 60, 0.9);
       transform: translateY(0);
       z-index: 2;
@@ -141,6 +126,11 @@
     &.open {
       visibility: visible;
       transform: translateX(0);
+
+      &:focus,
+      &:hover {
+        color: $brickred-color;
+      }
     }
   }
 
@@ -151,7 +141,7 @@
     
     color: transparent;
     opacity: 0.25;
-    border-top: 1px dashed $darkgrey-color;
+    border-top: 1px dashed $text-medium-color;
     
     z-index: 2;
   }
