--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,8 @@
+@import 'fonts';
 @import 'config';
 @import 'navigation';
 @import 'header';
 @import 'content';
+@import 'about';
 @import 'footer';
+@import 'form';
