--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -33,6 +33,14 @@
 
     &--image {
       width: 100%;
+      border-radius: 50%;
+      transition: all 1s ease;
+    
+      &:focus,
+      &:hover {
+        background-color: $text-fair-color;
+        box-shadow: 0px 0px 1rem;
+      }
     }
   }
 
@@ -40,39 +48,6 @@
     display: inline-block;
     margin: 2rem auto;
     width: 35rem;
-  
-    .form {
-      margin: 2rem auto;
-    
-
-      &__list {
-        list-style: none;
-      }
-
-      &__element {
-        height: 3rem;
-        margin: 0.4rem 0;
-        padding: 0.2rem;
-        width: 100%;
-        border-radius: 6px;
-        border: none;
-      }
-
-      &__textarea {
-        padding: 0.2rem;
-        height: 9rem;
-      }
-
-      &__button {
-        height: 3rem;
-        padding: 0.2rem 1rem;
-        border-radius: 6px;
-        float: left;
-        border: none;
-        text-transform: capitalize;
-        cursor: pointer;
-      }
-    }
   }
 
   &__dashline {
