Style portfolio section.

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -42,6 +42,10 @@ h5 {
   font-size: 1.4rem;
 }
 
+h6 {
+  font-size: 1.2rem;
+}
+
 // || Variables
 $blue-color: rgb(120, 204, 204);
 $darkgrey-color: rgb(80, 84, 91);
