--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,5 +1,9 @@
+.main__about--container {
+  margin: 0 5%;
+}
+
 .about__article {
-  flex: 1 30rem;
+  flex: 1 100%;
 
   .about__image {
     display: inline-block;
