--- a/src/scss/_blog.scss
+++ b/src/scss/_blog.scss
@@ -1,14 +1,18 @@
+.main__blog--container {
+  margin: 0 5%;
+}
+
 .blog__article {
-  flex: 1 30rem;
-  margin: 1rem 5% 2rem;
+  flex: 1 100%;
+  margin: 1rem 0 2rem;
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
   align-content: space-between;
 
   .blog__image {
-    width: 280px;
-    margin: 0 auto 2rem;
+    width: 100%;
+    margin-bottom: 2rem;
     background-color: rgba(255, 255, 255, 1);
     @include element-shadow;
 
@@ -22,7 +26,7 @@
 }
 
 .blog__title {
-  font-family: "Roboto Slab";
+  font-family: "Roboto";
   text-transform: none;
   text-shadow: 0px 0px 1px;
   text-align: left;
@@ -38,20 +42,29 @@
   }
 
   &--separator {
-    margin: 1rem auto;
+    margin: 1rem 0;
     width: 100%;
     box-shadow: 0px 0px 2px $text-dark-color;
   }
 }
 
 .blog__paragraph {
-  margin: 1rem 0;
-  font-family: "Roboto Slab";
+  margin-top: 1rem;
+  font-family: "Roboto";
   font-size: 1.4rem;
   line-height: 1.8;
   text-align: left;
+  
+  &--overflow {
+    display: inline-block;
+    max-height: 15rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 
   &--more {
+    position: relative;
+    top: -1rem;
     font-size: 1rem;
     opacity: 0.7;
     font-weight: bold;
@@ -62,10 +75,14 @@
       color: $text-dark-color;
     }
 
-    &:visited,
+    &:visited {
+      opacity: 0.7;
+      color: $brickred-color;
+    }
+
     &:focus,
-    &:active,
-    &:hover {
+    &:hover,
+    &:active {
       opacity: 1;
       color: $brickred-color;
     }
