--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,9 +1,11 @@
-.header {
+header {
   color: $text-fair-color;
   text-align: center;
-
   background: url(../images/background/header-background-w1100.png); //temporary
-  @include transition-ease;
+}
+
+.header {
+  margin: 0 5%;
 
   &__title {
     margin: 3rem auto 1rem;
@@ -14,7 +16,7 @@
 
   &__ribbon {
     display: inline-block;
-    margin: 1rem 5%;
+    margin: 1rem 0;
     overflow: visible;
 
     &--image {
@@ -23,7 +25,7 @@
   }
 
   &__slider {
-    margin: 1rem 5%;
+    margin: 1rem 0;
     padding: 0.5rem;
     background-color: rgba(251, 250, 246, 1);
     @include element-shadow;
@@ -47,12 +49,12 @@
     font-size: 3.2rem;
     color: $text-fair-color;
     line-height: 1.3;
-    margin: 2.5rem 5% 0;
+    margin-top: 2.5rem;
 
     &--second-line {
       font-size: 2rem;
       line-height: 1.4;
-      margin: 0 5% 3rem;
+      margin-bottom: 3rem;
     }
   }
 
