--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -1,3 +1,7 @@
+.main__portfolio--container {
+  margin: 0 5%;
+}
+
 .portfolio {
 
   &__filter {
@@ -6,7 +10,7 @@
     justify-content: flex-start;
     align-items: flex-start;
 
-    margin: 4rem 15% 2rem;
+    margin: 4rem 0 2rem;
     font-family: "Roboto";
     line-height: 1.8;
     list-style: none;
@@ -39,7 +43,7 @@
 
   &__box {
     margin: 1rem 1rem;
-    flex: 1 20rem;
+    flex: 1 100%;
     background-color: rgba(255, 255, 255, 1);
     border-radius: 3px;
     text-align: center;
