--- a/src/scss/_blog.scss
+++ b/src/scss/_blog.scss
@@ -11,15 +11,12 @@
   align-content: space-between;
 
   .blog__image {
-    width: 100%;
     margin-bottom: 2rem;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: transparent;
     @include element-shadow;
 
     &--img {
-      margin: 0.3rem;
-      padding-bottom: 210px;
-      background-color: $khaki-color;
+      width: 100%;
       opacity: 0.7;
     }
   }
