--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -36,12 +36,14 @@ footer {
     &--image {
       width: 100%;
       border-radius: 50%;
+      background-color: $text-fair-color;
+      box-shadow: 0px 0px 0.5rem $text-fair-color;
       transition: all 1s ease;
     
       &:focus,
       &:hover {
-        background-color: $text-fair-color;
-        box-shadow: 0px 0px 1rem;
+        background-color: $brickred-color;
+        box-shadow: 0px 0px 0.5rem $brickred-color;
       }
     }
   }
