--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -16,6 +16,13 @@
     line-height: 1.7;
     border-radius: 6px;
     border: none;
+
+    &--label {
+      float: left;
+      font-size: 1px;
+      line-height: 0.1;
+      visibility: hidden;
+    }
   }
 
   &__textarea {
