--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,3 +1,5 @@
+@import 'slider';
+
 header {
   color: $text-fair-color;
   text-align: center;
@@ -17,32 +19,10 @@ header {
   &__ribbon {
     display: inline-block;
     margin: 1rem 0;
-    overflow: visible;
 
     &--image {
       width: 100%;
     }
-  }
-
-  &__slider {
-    display: inline-block;
-    margin: 1rem 0;
-    padding: 0.5rem;
-    background-color: rgba(251, 250, 246, 1);
-    @include element-shadow;
-  }
-
-  &__slides {
-    background-color: black; // temporary
-  }
-
-  &__slide {
-    width: 100%;
-  }
-
-  .slider__caption { 
-    color: rgba(0, 0, 0, 0.6);
-    line-height: 1.5;
   }
 
   &__caption {
