--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 @import 'config';
 @import 'navigation';
 @import 'header';
-@import 'content';
+@import 'main';
 @import 'about';
 @import 'portfolio';
 @import 'blog';
