--- a/src/scss/config/_mixins.scss
+++ b/src/scss/config/_mixins.scss
@@ -1,63 +1,3 @@
-// || Simple reset
-html {
-  box-sizing: border-box;
-}
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  font-size: 10px;
-  line-height: 1;
-  scroll-behavior: smooth;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 300;
-  font-family: "Bazar";
-  text-transform: uppercase;
-}
-
-h1 {
-  font-size: 6.5rem;
-}
-
-h2 {
-  font-size: 2.7rem;
-}
-
-h3 {
-  font-size: 2.2rem;
-}
-
-h4 {
-  font-size: 1.6rem;
-}
-
-h5 {
-  font-size: 1.4rem;
-}
-
-h6 {
-  font-size: 1.2rem;
-}
-
-// || Variables
-$blue-color: rgb(120, 204, 204);
-$darkgrey-color: rgb(80, 84, 91);
-$khaki-color: rgb(228, 224, 207);
-$brickred-color: rgb(227, 139, 105);
-$lightgrey-color: rgb(225, 222, 219);
-
-$text-dark-color: rgb(56, 58, 60);
-$text-medium-color: rgb(75, 78, 76);
-$text-fair-color: rgb(246, 237, 216);
-
 @mixin flex-row {
   display: flex;
   flex-direction: row;
@@ -82,9 +22,9 @@ $text-fair-color: rgb(246, 237, 216);
   box-shadow: 3px 2px 7px rgba(0, 0, 0, 0.3);
 }
 
-@mixin main-title {
+@mixin main-title($text-shadow-color) {
   margin: 3rem auto 0;
-  text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.3);
+  text-shadow: 3px 3px 0px $text-shadow-color;
   
   &--separator {
     margin: 1rem;
