--- a/src/scss/elements/main/_main.scss
+++ b/src/scss/elements/main/_main.scss
@@ -16,7 +16,7 @@
   }
 
   &__title {
-    @include main-title;
+    @include main-title(rgba(0, 0, 0, 0.3));
   }
 
   &__container {
@@ -35,3 +35,7 @@
     }
   }
 }
+
+@import 'about';
+@import 'portfolio';
+@import 'blog';
