--- a/src/scss/elements/main/_portfolio.scss
+++ b/src/scss/elements/main/_portfolio.scss
@@ -48,6 +48,11 @@
     background-color: rgba(255, 255, 255, 1);
     border-radius: 3px;
     text-align: center;
+    @include transition-ease;
+
+    &--active {
+      background-color: $blue-color;
+    }
   }
 
   &__photo {
