--- a/src/scss/elements/header/_header.scss
+++ b/src/scss/elements/header/_header.scss
@@ -3,7 +3,8 @@
 header {
   color: $text-fair-color;
   text-align: center;
-  background: url(../images/background/header-background-w1100.png); //temporary
+  background: url(../images/background/header-background-w1100.png);
+  background-size: cover;
 }
 
 .header {
