--- a/src/scss/elements/main/_main.scss
+++ b/src/scss/elements/main/_main.scss
@@ -5,14 +5,17 @@
 
   &__about {
     background: url(../images/background/about-background-w1100.png);
+    background-size: cover;
   }
 
   &__portfolio {
     background: url(../images/background/portfolio-background-w1100.png);
+    background-size: cover;
   }
   
   &__blog {
     background: url(../images/background/blog-background-w1100.png);
+    background-size: cover;
   }
 
   &__title {
